--- a/regular_tasks.yml
+++ b/regular_tasks.yml
@@ -12,5 +12,7 @@
         name: "appends date output to /var/log/time.log"
         min: "01"
         hour: "*"
+        day: "*"
+        month: "*"
         job: "date >> /var/log/time.log"
         user: "root"
