--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -4,3 +4,8 @@
     number: 1
     state: present
     part_end: 800MiB  
+- name: Create a volume group on top of /dev/sda3 and resize the volume group /dev/sda3 to the maximum possible
+  lvg:
+    vg: vg_database
+    pvs: /dev/vdb1
+    pvresize: yes    
