mount lv_mysql corrected create xfs

--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -14,7 +14,10 @@
     lv: lv_mysql
     size: 512m
 - name: create xfs filesystem
-  command: mkfs.xfs  /dev/vg_database/lv_mysql
+  filesystem:
+    dev: /dev/vg_database/lv_mysql
+    force: yes
+    fstype: xfs
 - name: mount lv_mysql /mnt/mysql_backups
   mount:
     path: /mnt/mysql_backups
