--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -18,6 +18,12 @@
     dev: /dev/vg_database/lv_mysql
     force: yes
     fstype: xfs
+- name: unmount lv_mysql /mnt/mysql_backups
+  mount:
+    path: /mnt/mysql_backups
+    src: /dev/vg_database/lv_mysql
+    fstype: xfs
+    state: unmounted
 - name: mount lv_mysql /mnt/mysql_backups
   mount:
     path: /mnt/mysql_backups
