mysqld enabled and started

--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -47,4 +47,9 @@
   firewalld:
     service: mysql
     permanent: yes 
-    state: enabled       
+    state: enabled
+- name: Make sure mysqld is running and enabled
+  systemd:
+    enabled: yes
+    state: started
+    name: mysqld           
