--- a/snippets.yml
+++ b/snippets.yml
@@ -6,43 +6,52 @@
   remote_user: automation
   vars:
     motd_value: "{{ lookup('file', '/etc/motd') }}"
-    objs:
+    - name: Give me list combo of two lists
+      ansible.builtin.debug:
+        msg: "{{ [1,2,3,4,5] | zip(['a','b','c','d','e','f']) | list }}"
+
+    - name: Give me shortest combo of two lists
+      ansible.builtin.debug:
+        msg: "{{ [1,2,3] | zip(['a','b','c','d','e','f']) | list }}"
+
+ #  objs:
  #     - { key1: value1, key2: [ value2, value3] }
  #     - { key1: value4, key2: [ value5, value6] } 
-      - key1: value1
-        key2:
-          - value2
-          - value3
-      - key1: value4
-        key2:
-          - value5
-          - value6
-  vars_files:
-    - /home/automation/plays/secret.yml
-    - /home/automation/plays/vars/user_list.yml
-  tasks:
-    - name: create directories
-      file: 
-        path: "{{ item.key1 }}"
-        state: directory
-      with_items:
-        - "{{ objs}}"
+ #    - key1: value1
+ #      key2:
+ #        - value2
+ #        - value3
+ #    - key1: value4
+ #      key2:
+ #        - value5
+ #        - value6
+ #vars_files:
+ #  - /home/automation/plays/secret.yml
+ #  - /home/automation/plays/vars/user_list.yml
+ #tasks:
+ #  - name: Give me list combo of two lists
+ #ansible.builtin.debug:
+ #msg: "{{ [1,2,3,4,5] | zip(['a','b','c','d','e','f']) | list }}"
+ # - name: create directories
+ #   file: 
+ #     path: "{{ item.key1 }}"
+ #     state: directory
+ #   with_items:
+ #     - "{{ objs}}"
 #        - { key1: value1, key2: [ value2, value3] }
 #        - { key1: value4, key2: [ value5, value6] }
 #        - key1: value1
 #          key2:
 #            - value2
 #            - value3
-    - name: create files
-      file:
-        path: "{{ item.0.key1 }}/{{ item.1 }}"
-        state: touch
-      with_subelements:
-        - "{{ objs }}"
-        - key2 
-
-
-#    - include_tasks: repo-paths.yml
+#   - name: create files
+#     file:
+#       path: "{{ item.0.key1 }}/{{ item.1 }}"
+#       state: touch
+#     with_subelements:
+#       - "{{ objs }}"
+#       - key2 
+#     - include_tasks: repo-paths.yml
 #    - debug:
 #        msg: outer "{{repos}}"    
 #      with_items: "{{ repos }}"
