--- a/snippets.yml
+++ b/snippets.yml
@@ -13,6 +13,9 @@
     - name: Give me shortest combo of two lists
       ansible.builtin.debug:
         msg: "{{ [1,2,3] | zip(['a','b','c','d','e','f']) | list }}"
+    - name: Give me longest combo of three lists , fill with X
+      ansible.builtin.debug:
+        msg: "{{ [1,2,3] | zip_longest(['a','b','c','d','e','f'], [21, 22, 23], fillvalue='X') | list }}"    
 
  #  objs:
  #     - { key1: value1, key2: [ value2, value3] }
