--- a/snippets.yml
+++ b/snippets.yml
@@ -6,6 +6,12 @@
   remote_user: automation
   vars:
     motd_value: "{{ lookup('file', '/etc/motd') }}"
+    keys_list:
+      - one
+      - two
+    values_list:
+      - apple
+      - orange
   tasks:    
     - name: Give me list combo of two lists
       ansible.builtin.debug:
@@ -16,7 +22,9 @@
     - name: Give me longest combo of three lists , fill with X
       ansible.builtin.debug:
         msg: "{{ [1,2,3] | zip_longest(['a','b','c','d','e','f'], [21, 22, 23], fillvalue='X') | list }}"    
-
+    - name:
+      ansibel.builtin.debug:
+        msg: "{{ dict(keys_list | zip(values_list)) }}"
  #  objs:
  #     - { key1: value1, key2: [ value2, value3] }
  #     - { key1: value4, key2: [ value5, value6] } 
