--- a/snippets.yml
+++ b/snippets.yml
@@ -12,17 +12,23 @@
     values_list:
       - apple
       - orange
+    tags:
+      Application: payment
+      Environment: dev  
   tasks:    
-    - name: Touch files with an optional mode
-      ansible.builtin.file:
-        dest: "{{ item.path }}"
-        state: touch
-        mode: "{{ item.mode | default(omit) }}"
-      loop:
-        - path: /tmp/foo
-        - path: /tmp/bar
-        - path: /tmp/baz
-          mode: "0444"
+    - name: Transform a dictionary into a list
+      ansible.builtin.debug:
+        msg: {{ tags | dict2items }}
+ #  - name: Touch files with an optional mode
+ #    ansible.builtin.file:
+ #      dest: "{{ item.path }}"
+ #      state: touch
+ #      mode: "{{ item.mode | default(omit) }}"
+ #    loop:
+ #      - path: /tmp/foo
+ #      - path: /tmp/bar
+ #      - path: /tmp/baz
+ #        mode: "0444"
  #  - name: Give me list combo of two lists
  #    ansible.builtin.debug:
  #      msg: "{{ [1,2,3,4,5] | zip(['a','b','c','d','e','f']) | list }}"
