--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -52,4 +52,14 @@
   systemd:
     enabled: yes
     state: started
-    name: mysqld           
+    name: mysqld
+- name: Configure MySQL server configuration file
+  template: src=my.cnf.j2 dest=/etc/my.cnf
+  tags: mysql
+  notify: restart mysql
+- name: Make sure there is neither a database with name 'foo', nor one with name 'bar'
+  community.mysql.mysql_db:
+    name:
+      - foo
+      - bar
+    state: absent                 
