--- a/roles/sample-apache/tasks/main.yml
+++ b/roles/sample-apache/tasks/main.yml
@@ -2,7 +2,7 @@
   yum:
     name: [httpd, mod_ssl, php]
     state: installed
-- firewalld:
+  firewalld:
     service: [http, https]
     permanent: yes
     state: enabled    
