--- a/roles/sample-apache/tasks/main.yml
+++ b/roles/sample-apache/tasks/main.yml
@@ -2,6 +2,7 @@
   yum:
     name: [httpd, mod_ssl, php]
     state: installed
+- name: configure firewall    
   firewalld:
     service: [http, https]
     permanent: yes
