undoing not working stuff

--- a/roles/sample-apache/tasks/main.yml
+++ b/roles/sample-apache/tasks/main.yml
@@ -4,10 +4,9 @@
     state: installed
 - name: configure firewall    
   firewalld:
-#    service: "{{ item }}"
-    service: [http, https]
+    service: "{{ item }}"
     permanent: yes
     state: enabled
-#  with_items:
-#     - http
-#     - https      
+  with_items:
+     - http
+     - https      
