--- a/roles/sample-apache/tasks/main.yml
+++ b/roles/sample-apache/tasks/main.yml
@@ -2,6 +2,11 @@
   yum:
     name: [httpd, mod_ssl, php, firewalld]
     state: installed
+- name: Manage firewalld service
+  systemd:
+    name: firewalld
+    state: "{{ firewall_enabled | ternary('started','stopped') }}"
+    enabled: "{{ firewall_enabled }}"    
 - name: configure firewall    
   firewalld:
     service: "{{ item }}"
@@ -9,4 +14,5 @@
     state: enabled
   with_items:
      - http
-     - https      
+     - https
+     
