--- a/roles/firewalld_rules/tasks/manage_inbound_rule.yml
+++ b/roles/firewalld_rules/tasks/manage_inbound_rule.yml
@@ -7,7 +7,8 @@
     owner: root
     group: root
     mode: "0644"
-  notify: reload_firewalld
+  notify:
+    - reload_firewalld
 
 #- name: flush-handlers
 #  meta: flush_handlers
