--- a/roles/firewalld_rules/handlers/main.yml
+++ b/roles/firewalld_rules/handlers/main.yml
@@ -1,8 +1,9 @@
-#- name: reload_firewalld
+---
+- name: reload_firewalld
 #  systemd:
 #    name: firewalld
 #    state: reload 
 #
 #- name: hello
-#  debug:
-#    msg: HELLO    
+  debug:
+    msg: HELLO
