--- a/roles/firewalld_rules/tasks/manage_inbound_rule.yml
+++ b/roles/firewalld_rules/tasks/manage_inbound_rule.yml
@@ -6,8 +6,7 @@
     owner: root
     group: root
     mode: "0644"
-  notify:
-    - reload_firewalld
+  notify: reload_firewalld
     
 
 #- name: flush-handlers
