--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -60,6 +60,9 @@
   template: src=my.cnf.j2 dest=/etc/my.cnf
   tags: mysql
   notify: restart mysql
+
+- meta: flush_handlers
+
 - name: Make sure there is neither a database with name 'foo', nor one with name 'bar'
   community.mysql.mysql_db:
     name:
