--- a/roles/sample-mysql/handlers/main.yml
+++ b/roles/sample-mysql/handlers/main.yml
@@ -1,4 +1,4 @@
-- name: Make sure mysqld is restarted
+- name: restart mysql
   systemd:
     state: restarted
-    name: restart mysql
+    name: mysqld
