delete service file try flush_handlers again

--- a/roles/firewalld_rules/tasks/manage_inbound_rule.yml
+++ b/roles/firewalld_rules/tasks/manage_inbound_rule.yml
@@ -9,8 +9,8 @@
   notify: reload_firewalld
     
 
-#- name: flush-handlers
-#  meta: flush_handlers
+- name: flush-handlers
+  meta: flush_handlers
 #
 #- name: Manage {{ rule.name }} firewalld service
 #  firewalld:
