--- a/roles/firewalld_rules/tasks/manage_inbound_rule.yml
+++ b/roles/firewalld_rules/tasks/manage_inbound_rule.yml
@@ -16,11 +16,11 @@
 
 - name: flush-handlers
   meta: flush_handlers
-#
-#- name: Manage {{ rule.name }} firewalld service
-#  firewalld:
-#    service: "{{ rule.name }}"
-#    permanent: yes
-#    immediate: yes
-#    zone: "{{ rule.zone | default( firewalld_default_zone ) }}"
-#    state: enabled
+
+- name: Manage {{ rule.name }} firewalld service
+  firewalld:
+    service: "{{ rule.name }}"
+    permanent: yes
+    immediate: yes
+    zone: "{{ rule.zone | default( firewalld_default_zone ) }}"
+    state: enabled
