zone without quote

--- a/roles/testrole/defaults/main.yml
+++ b/roles/testrole/defaults/main.yml
@@ -3,8 +3,7 @@
 testrole_firewalld_rules:
   inbound:
     - name: app_inbound
-      zone:
-        - "testing"
+      zone: testing
       ports:
         - port: 80
           protocol: tcp
