--- a/handlers_test.yml
+++ b/handlers_test.yml
@@ -19,7 +19,7 @@
         retries: 30
         delay: 5
       - file: path=/var/run/myservice_restart.pending state=absent
-    when: myservice_restart.stats.exists
+    when: myservice_restart.stat.exists
   handlers:
   - name: restart my service
     file: path=/var/run/myservice_restart.pending state=touch
