--- a/handlers_test.yml
+++ b/handlers_test.yml
@@ -12,6 +12,7 @@
     stat: path=/var/run/myservice_restart.pending
     register: myservice_restart
   - name: Restart my service
+    debug: msg= myservice_restart  
     block:
       - service: name=myservice state=restarted
         register: restart_status
