print myservice_restart

--- a/handlers_test.yml
+++ b/handlers_test.yml
@@ -11,8 +11,9 @@
   - name: check if restart pending
     stat: path=/var/run/myservice_restart.pending
     register: myservice_restart
-  - name: Restart my service
-    debug: msg= myservice_restart  
+  - name: print myservice_restart
+     debug: msg= myservice_restart 
+  - name: Restart my service 
     block:
       - service: name=myservice state=restarted
         register: restart_status
