--- a/roles/snippets_role/tasks/main.yml
+++ b/roles/snippets_role/tasks/main.yml
@@ -24,9 +24,9 @@
     - name: Give me longest combo of three lists , fill with X
       ansible.builtin.debug:
         msg: "{{ [1,2,3] | zip_longest(['a','b','c','d','e','f'], [21, 22, 23], fillvalue='X') | list }}"    
- #  - name: construct dict
- #    ansible.builtin.debug:
- #      msg: "{{ dict(keys_list | zip(values_list)) }}"
+    - name: construct dict
+      ansible.builtin.debug:
+        msg: "{{ dict(keys_list | zip(values_list)) }}"
  #  objs:
  #     - { key1: value1, key2: [ value2, value3] }
  #     - { key1: value4, key2: [ value5, value6] } 
