--- a/PRACTICE/double-with_items-loop.yml
+++ b/PRACTICE/double-with_items-loop.yml
@@ -18,7 +18,7 @@
   tasks:
   - name: Creating Secondary group
     group:
-      name: "{{ item.1 }}"
+      name: "a{{ item.1 }}"
       state: absent 
     with_subelements:
       - '{{ userslist }}'
