--- a/PRACTICE/double-with_items-loop.yml
+++ b/PRACTICE/double-with_items-loop.yml
@@ -19,7 +19,7 @@
   - name: Creating Secondary group
     group:
       name: "a{{ item.1 }}"
-      state: absent 
+      state: present
     with_subelements:
       - '{{ userslist }}'
       - groups
