--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,7 +10,7 @@
 [defaults]
 
 # some basic default values...
-vault-id-list = ansible_exam@~/.vault_key
+vault-identity-list = ansible_exam@~/.vault_key
 #inventory      = /etc/ansible/hosts
 inventory      = /home/automation/plays/inventory.yml
 #library        = /usr/share/my_modules/
