--- a/inner-users-database.yml
+++ b/inner-users-database.yml
@@ -1,5 +1,5 @@
     - include_tasks: inner-users-database-webservers-sshkey.yml
       loop: "{{users}}"
       when: '"{{item.uid}}" is match("2") and ansible_hostname in outer_item'
-#     with_items: "{{groups['webservers']}}"  
-#     when: ansible_hostname !=  item  or ansible_hostname ==  item
+
+    - debug:    
