--- a/inner-users-database.yml
+++ b/inner-users-database.yml
@@ -1,4 +1,5 @@
-    - include_tasks: inner-users-database-webservers-sshkey.yml
+    - name: new name
+      include_tasks: inner-users-database-webservers-sshkey.yml
       loop: "{{users}}"
       when: '"{{item.uid}}" is match("2") and ansible_hostname in outer_item'
 
