--- a/10_regular_tasks.yml
+++ b/10_regular_tasks.yml
@@ -6,7 +6,7 @@
   - name: creates a root cron job
     cron:
       name: date > var/log/time.log
-      minute: 01
-      hour: *
+      minute: "01"
+      hour: "*"
       user: root
       job: "date > var/log/time.log"
