--- a/regular_tasks.yml
+++ b/regular_tasks.yml
@@ -7,6 +7,11 @@
   vars_files:
     - /home/automation/plays/secret.yml
   tasks:
+    - name: install cron
+      yum:
+        name: cron
+        state: present
+        
     - name: Scheduled Tasks
       cron:
         name: "appends date output to /var/log/time.log"
