--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -62,7 +62,7 @@
     login_user: ‘root’
     login_password: ”
     name: ‘root’
-    password: ‘{{ secret.database_password }}’
+    password: ‘{{ secrets.database_password }}’
     state: present    
 - name: Configure MySQL server configuration file
   template: src=my.cnf.j2 dest=/etc/my.cnf
