--- a/mysql.yml
+++ b/mysql.yml
@@ -3,6 +3,6 @@
   hosts: database
   become: yes
   remote_user: automation
-  vars-files: secret.yml
+  vars_files: secret.yml
   roles:
     - sample-mysql
