--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -58,11 +58,11 @@
     name: mysqld
 - name: Set MySQL root Password
   mysql_user:
-    login_host: ‘localhost’
-    login_user: ‘root’
-    login_password: ”
-    name: ‘root’
-    password: ‘{{ database_password }}’
+    login_host: localhost
+    login_user: root
+    login_password:
+    name: root
+    password: "{{ database_password }}"
     state: present    
 - name: Configure MySQL server configuration file
   template: src=my.cnf.j2 dest=/etc/my.cnf
