--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -58,7 +58,7 @@
     name: mysqld
 - name: Set MySQL root Password
   mysql_user:
-    login_host: localhost
+    login_host:
     login_user: root
     login_password:
     name: root
