--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -59,9 +59,9 @@
 - name: Set MySQL root Password
   mysql_user:
     check_implicit_admin: yes
-    login_host: ""
-    login_user: root
-    login_password: ""
+  #  login_host: ""
+  #  login_user: root
+  #  login_password: ""
     name: root
     password: "{{ database_password }}"
     state: present    
