--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -58,10 +58,10 @@
     name: mysqld
 - name: Set MySQL root Password
   mysql_user:
+    login_host: ""
+    login_user: root
+    login_password: ""
     check_implicit_admin: yes
-  #  login_host: ""
-  #  login_user: root
-  #  login_password: ""
     name: root
     password: "{{ database_password }}"
     state: present    
