--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -58,13 +58,13 @@
     name: mysqld
 - name: Set MySQL root Password
   mysql_user:
-    login_host: ""
-    login_user: root
-    login_password: ""
-    check_implicit_admin: true
+  #  login_host: ""
+  #  login_user: root
+  #  login_password: ""
     name: root
     password: "{{ database_password }}"
-    state: present    
+    check_implicit_admin: true    
+  #  state: present    
 - name: Configure MySQL server configuration file
   template: src=my.cnf.j2 dest=/etc/my.cnf
   tags: mysql
