--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -62,8 +62,8 @@
     login_host: ""
     login_user: root
     login_password: ""
-    name: root
-    password: "{{ database_password }}"
+#    name: root
+#    password: "{{ database_password }}"
   #  state: present    
 - name: Configure MySQL server configuration file
   template: src=my.cnf.j2 dest=/etc/my.cnf
