--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -62,6 +62,7 @@
     login_host: ""
     login_user: root
     login_password: ""
+    user: root
 #    name: root
 #    password: "{{ database_password }}"
   #  state: present    
