--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -68,7 +68,7 @@
     login_host: ""
     login_user: root
     login_password: ""
-    user: root
+    user: ""
     password: ""
   #  state: present    
 - name: Configure MySQL server configuration file
