user: "root"     password: "{{ database_password }}"

--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -68,8 +68,8 @@
     login_host: ""
     login_user: ""
     login_password: ""
-    user: ""
-    password: ""
+    user: "root"
+    password: "{{ database_password }}"
   #  state: present    
 - name: Configure MySQL server configuration file
   template: src=my.cnf.j2 dest=/etc/my.cnf
