--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -62,17 +62,17 @@
   notify:
   - restart mysqld
 
-- name: Touch a file, using symbolic modes to set the permissions (equivalent to 0644)
-  file:
-    path: ~/.my.cnf
-    state: touch
-    mode: u=rw,g=r,o=r
+#- name: Touch a file, using symbolic modes to set the permissions (equivalent to 0644)
+#  file:
+#    path: ~/.my.cnf
+#    state: touch
+#    mode: u=rw,g=r,o=r
 
 - name: Set MySQL root Password
   mysql_user:
     check_implicit_admin: true    
     login_host: 
-    login_user: 
+    login_unix_socket: /var/run/mysqld/mysqld.sock 
     login_password: 
     user: root
     password: "{{ database_password }}"
