--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -72,7 +72,7 @@
   mysql_user:
     check_implicit_admin: true    
     login_host: 
-    login_unix_socket: /var/run/mysqld/mysqld.sock 
+#    login_unix_socket: /var/run/mysqld/mysqld.sock 
     login_password: 
     user: root
     password: "{{ database_password }}"
