--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -73,7 +73,7 @@
     check_implicit_admin: true    
     login_host: 
 #    login_unix_socket: /var/run/mysqld/mysqld.sock 
-    login_password: 
+#    login_password: 
     user: root
     password: "{{ database_password }}"
   #  state: present    
