#    password: "{{ database_password }}"

--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -75,7 +75,7 @@
 #    login_unix_socket: /var/run/mysqld/mysqld.sock 
 #    login_password: 
     user: root
-    password: "{{ database_password }}"
+#    password: "{{ database_password }}"
   #  state: present    
 
 - name: Configure MySQL server configuration file
