--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -74,7 +74,7 @@
 #    login_host: 
 #    login_unix_socket: /var/run/mysqld/mysqld.sock 
 #    login_password: 
-    user: root
+#    user: root
 #    password: "{{ database_password }}"
   #  state: present    
 
