community.mysql.mysql_user:

--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -69,7 +69,7 @@
 #    mode: u=rw,g=r,o=r
 
 - name: Set MySQL root Password
-  mysql_user:
+  community.mysql.mysql_user:
 #    check_implicit_admin: true    
 #    login_host: 
 #    login_unix_socket: /var/run/mysqld/mysqld.sock 
