name: python3-PyMySQL

--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -36,7 +36,7 @@
     state: installed
 - name: pip install PyMySQL
   pip:
-    name: PyMySQL    
+    name: python3-PyMySQL    
 - name: install the latest version of firewalld
   yum:
     name: firewalld
