--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -70,10 +70,10 @@
 
 - name: Set MySQL root Password
   community.mysql.mysql_user:
-#    check_implicit_admin: true    
-#    login_host: 
-#    login_unix_socket: /var/run/mysqld/mysqld.sock 
-#    login_password: 
+    check_implicit_admin: true    
+    login_host: 
+    login_unix_socket: /var/run/mysqld/mysqld.sock 
+    login_password: 
     name: bob
 #    password: "{{ database_password }}"
   #  state: present    
