--- a/roles/sample-mysql/tasks/main.yml
+++ b/roles/sample-mysql/tasks/main.yml
@@ -72,7 +72,7 @@
   community.mysql.mysql_user:
     check_implicit_admin: true    
     login_host: 
-    login_unix_socket: /var/run/mysqld/mysqld.sock 
+    login_user: 
     login_password: 
     name: bob
 #    password: "{{ database_password }}"
