--- a/roles/geerlingguy.haproxy/defaults/main.yml
+++ b/roles/geerlingguy.haproxy/defaults/main.yml
@@ -17,7 +17,7 @@ haproxy_backend_balance_method: 'roundrobin'
 haproxy_backend_httpchk: 'HEAD / HTTP/1.1\r\nHost:localhost'
 
 # List of backend servers.
-haproxy_backend_servers: []
+haproxy_backend_servers:
     - name: client2.ipa.vm
       address: 192.168.128.4:80
     - name: client3.ipa.vm
